# bugscope

./: CONTRIBUTING.md  Cargo.toml  DEEP_AUDIT.md  LICENSE  README.md
examples/: basic_scope.rs  cli_integration.rs  engagement.rs
src/: adversarial_tests.rs  cli.rs  config.rs  engagement.rs  error.rs  headers.rs  lib.rs  profile.rs  ratelimit.rs  registry.rs  scope.rs
