[package]
exclude = ["target/"]
name = "bugscope"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["Corum Collective LLC <engineering@corumcollective.com>"]
description = "Drop-in scope enforcement, authorization, and compliance helpers for security CLI tools"
readme = "README.md"
license = "MIT"
repository = "https://github.com/santhsecurity/bugscope"
keywords = ["scope", "security", "bugbounty", "cli", "scanner"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
thiserror = "2.0"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
url = "2.5"
ipnet = "2.10"
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
humantime-serde = "1.1"
http = "1.3"
regex = "1.11"
idna = "1.1"

[dev-dependencies]
tempfile = "3.19"
wiremock = "0.6"
